feat: add endpoint for all sensors
