# api.yaml
@@ -12,19 +12,17 @@ servers:
 paths:
     /sensors:
         get:
-            summary: Returns all sensors
-            description: Returns all sensors.
+            summary: Returns all sensor IDs
+            description: Returns all sensor IDs.
             operationId: getSensors
 
             responses:
                 "200":
-                    description: An array of sensors
+                    description: An array of sensor IDs
                     content:
                         application/json:
                             schema:
-                                type: array
-                                items:
-                                    $ref: "#/components/schemas/Sensor"
+                                $ref: "#/components/schemas/SensorIds"
 
     /sensor/{id}:
         get:
@@ -244,6 +242,21 @@ paths:
 
 components:
     schemas:
+        SensorIds:
+            type: object
+            description: An array of sensor IDs.
+
+            required:
+                - "sensors"
+
+            properties:
+                sensors:
+                    type: array
+                    description: An array of sensor IDs.
+                    items:
+                        type: integer
+                        example: 1
+
         Sensor:
             type: object
             description: A sensor that collects data.
