# cmd/main.go
@@ -20,6 +20,8 @@ func main() {
 	}
 
 	http.HandleFunc("/v1/plant/", plant.PlantHandler)
+
+	http.HandleFunc("/v1/sensors", sensor.SensorsHandler)
 	http.HandleFunc("/v1/sensor/", sensor.SensorHandler)
 
 	fmt.Println(http.ListenAndServe(fmt.Sprintf(":%d", config.PlantBuddyConfig.Port), nil))
